--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
         <section class="battle-zone">
           <div class="cards">
-            <div class="card-wrapper">
+            <div class="card-wrapper card-player" id="cardPlayer">
               <h2 class="card-heading">Ваш герой</h2>
               <div class="card">
                 <div class="card-title">
@@ -194,7 +194,7 @@
                 Дополнительное умение
               </button>
             </div>
-            <div class="card-wrapper">
+            <div class="card-wrapper card-enemy" id="cardEnemy">
               <h2 class="card-heading">Герой оппонента</h2>
               <div class="card">
                 <div class="card-title">
